--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -56,7 +56,7 @@
 		<meta property="og:image:alt" content="{{ data.description }}">
 
 		<meta name="author" content="{{ data.author.name }}">
-		<link rel="preload" href="/_assets/css/all.css" as="style">
+		<link rel="preload" href="/_assets/css/all.css" as="style" crossorigin>
 		<link rel="preload" href="/_assets/fonts/TiemposHeadline-Regular.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/_assets/fonts/AdelleSans-Light.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/_assets/fonts/TiemposTextWeb-Regular.woff2" as="font" type="font/woff2" crossorigin>
