--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -23,39 +23,35 @@
 		<meta name="theme-color" content="#12073f">
 		<link rel="icon" type="image/png" href="/_assets/img/icon-32.png" sizes="32x32">
 
-		<!-- Half my site’s transfer is in `meta` nonsense. -->
 		<script type="application/ld+json">
 			{
-				"@context": "http://schema.org",
-				"@type": "Organization",
-				"url": "{{ data.url }}",
-				"title": "{{ data.title }}",
-				"author_name": "{{ data.author.name }}",
-				"logo": "{{ data.url }}/_assets/img/card.gif",
+				"@context": "https://schema.org",
+				"@type": "Person",
+				"@id": "{{ data.url }}/#main",
+				"givenName": "Mat",
+				"familyName": "Marquis",
+				"alternateName": "Wilto",
+				"description": "Front-End Developer",
+				"email": "mat@matmarquis.com",
+				"image": "{{ data.url }}/_assets/img/mm.jpg",
+				"jobTitle": "Independent Consultant",
+				"knowsLanguage": "sgn-ase",
 				"sameAs" : [
-					"https://twitter.com/wilto"
+					"https://front-end.social/@Wilto",
+					"https://github.com/wilto"
 				] 
 			}
 		</script>
 
-		<!-- Twitter/Slack cards: -->
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@wilto">
-		<meta name="twitter:creator" content="@wilto">
 		<meta property="og:site_name" content="{{ data.name }}">
-		<meta name="twitter:title" content="{{ data.title }}">
 		<meta property="og:title" content="{{ data.title }}">
 		<meta property="og:url" content="{{ data.url }}">
-
-		<meta name="twitter:description" content="{{ lede }}">
 		<meta property="og:description" content="{{ lede }}">
-
-		<meta name="twitter:image" content="{{ data.url }}/_assets/img/card.gif">
-		<meta name="twitter:image:alt" content="{{ data.description }}">
 		<meta property="og:image" content="{{ data.url }}/_assets/img/card.gif">
 		<meta property="og:image:alt" content="{{ data.description }}">
 
 		<meta name="author" content="{{ data.author.name }}">
+
 		<link rel="preload" href="/_assets/fonts/TiemposHeadline-Regular.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/_assets/fonts/AdelleSans-Light.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/_assets/fonts/TiemposTextWeb-Regular.woff2" as="font" type="font/woff2" crossorigin>
