--- a/_src/sw.njk
+++ b/_src/sw.njk
@@ -1,17 +1,11 @@
-
-/*
-This is a modified version of Ethan Marcotte’s SW (https://ethanmarcotte.com/theworkerofservices.js), which was a modified version of Jeremy Keith’s service worker (https://adactio.com/serviceworker.js), with a few additional edits borrowed from Filament Group’s. (https://www.filamentgroup.com/sw.js)
-
-Thanks to both Jeremy and Filament Group for this, and everything else they do.
-
-https://adactio.com/about/
-https://www.filamentgroup.com/
-*/
+---
+permalink: sw.js
+---
 
 (function() {
 	"use strict";
 
-	const version = "780";
+	const version = "{{ data.build }}";
 	const cacheName = version + "::hirewilto:";
 
 	const staticCacheName = cacheName + "static";
