--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -27,7 +27,7 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "Person",
-				"@id": "{{ data.url }}/#main",
+				"@id": "{{ data.url }}#main",
 				"givenName": "Mat",
 				"familyName": "Marquis",
 				"alternateName": "Wilto",
