There comes a time.

--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -115,6 +115,10 @@
 						<dt>Mastodon</dt>
 						<dd><a rel="me" href="https://front-end.social/@wilto">https://front-end.social/@<b>wilto</b></a></dd>
 					</div>
+					<div>
+						<dt>Bluesky</dt>
+						<dd><a rel="me" href="https://bsky.app/profile/wil.to">https://bsky.app/profile/@<b>wil.to</b></a></dd>
+					</div>
 				</dl>
 			</address>
 			<div class="site-meta">
