--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -61,48 +61,16 @@
 	<body>
 
 		<header>
-			<svg class="w-logo" viewBox="0 0 210 210" width="125" height="125" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M.412.353h206.647V207H.412z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path id="w-bg" d="M207.059 103.677c0 57.063-46.26 103.323-103.323 103.323C46.672 207 .412 160.74.412 103.677.412 46.613 46.672.353 103.736.353s103.323 46.26 103.323 103.324" fill="#12073F" mask="url(#b)"/><path id="w-fore" fill="#FFF" d="M101.405 77.63H80.878L93.36 99.657l-5.579 9.812L69.614 77.63H49.087l38.578 68.359.08-.137.077.137 15.845-28.141 15.947 28.141 10.38-18.255z"/><path fill="#EF4136" d="M137.823 77.647L125.55 99.23h20.65l12.183-21.425z"/></g></svg>
+			<nav class="nav">
+				<a href="/">
+					<span class="a11y-only">Home</span>
+					<svg class="w-logo" aria-hidden="true" viewBox="0 0 210 210" width="125" height="125" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M.412.353h206.647V207H.412z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path id="w-bg" d="M207.059 103.677c0 57.063-46.26 103.323-103.323 103.323C46.672 207 .412 160.74.412 103.677.412 46.613 46.672.353 103.736.353s103.323 46.26 103.323 103.324" fill="#12073F" mask="url(#b)"/><path id="w-fore" fill="#FFF" d="M101.405 77.63H80.878L93.36 99.657l-5.579 9.812L69.614 77.63H49.087l38.578 68.359.08-.137.077.137 15.845-28.141 15.947 28.141 10.38-18.255z"/><path fill="#EF4136" d="M137.823 77.647L125.55 99.23h20.65l12.183-21.425z"/></g></svg>
+				</a>
+			</nav>
 		</header>
-		<main role="main" id="main"{% if templateClass %} class="{{ templateClass }}"{% endif %}>
-			<div class="body">
-				{% if subhed %}
-				<div class="head">
-					<h1 class="hed txt-shaded">{{ subhed | safe }}</h1>
-					<p class="lede">{{ lede | safe }}</p>
-				</div>
-				{% endif %}
 
-				{% if layoutContent %}
-				<section class="sub sublede">
-					{{ layoutContent | safe }}
-				</section>
-				{% endif %}
-
-				{% set sections = collections.sections | reverse %}
-				{%- for section in sections-%}
-					{% if section.data.pageClass == "contact" %}
-					<section class="sub sub-{{  section.data.pageClass }}" role="region" aria-labelledby="section-{{  section.data.pageClass }}">
-						<div class="section-head">
-							<h2 class="section-hed txt-shaded" id="section-{{ section.data.pageClass }}">{{ section.data.title | safe }}</h2>
-						</div>
-						<div class="section-content">
-							{{ section.data.content | safe }}
-						</div>
-					</section>
-					{% else %}
-					<section class="sub sub-{{ section.data.pageClass }}" role="region" aria-labelledby="section-{{  section.data.pageClass }}">
-						<div class="section-head">
-							<h2 class="section-hed" id="section-{{ section.data.pageClass }}">{{ section.data.title | safe }}</h2>
-						</div>
-						<div class="section-content">
-							{{ section.data.content | safe }}
-						</div>
-					</section>
-					{% endif %}
-				{%- endfor -%}
-			</div>
-		</main>
-
+		{% block inner %}
+    {% endblock %}
 
 		<footer class="site-foot">
 			<address class="me">
