--- a/_src/_templates/home.njk
+++ b/_src/_templates/home.njk
@@ -11,7 +11,7 @@
     {% endif %}
 
     {% if layoutContent %}
-    <section class="sub sublede">
+    <section class="sublede">
       {{ layoutContent | safe }}
     </section>
     {% endif %}
