Chuck an RSS feed on here.

--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -57,6 +57,8 @@
 		<link rel="preload" href="/_assets/fonts/TiemposTextWeb-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
 		<link rel="stylesheet" href="/_assets/css/all.css">
+
+		<link rel="alternate" href="/feed.xml" title="Wil.to Blog" type="application/atom+xml">
 	</head>
 	<body>
 
