--- a/_src/_assets/css/type.css
+++ b/_src/_assets/css/type.css
@@ -318,3 +318,27 @@ h1.hed {
         color: #3c3d34;
     }
 }
+
+.js4e-logo {
+    display: block;
+    width: auto;
+    max-width: 100%;
+}
+
+.sub-books .js4e-logo {
+    margin-block-start: .5rem;
+    max-width: 18rem;
+}
+
+.js4e {
+    counter-reset: reversed(newsletter);
+}
+
+.js4e .hed::before {
+    font-family: monospace;
+    font-size: 1.25rem;
+    counter-increment: newsletter -1;
+    content: counter(newsletter)".";
+    color: #ef4136;
+    margin-left: -1.25em;
+}
