--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -94,8 +94,7 @@
 				</dl>
 			</address>
 			<div class="site-meta">
-				<p>Built with <a href="https://www.11ty.io/">Eleventy</a>. The source is available on <a href="https://github.com/Wilto/hire.wil.to">GitHub</a>.</p>
-				<p>For questions, comments, or problems using the site, <a href="https://github.com/Wilto/hire.wil.to/issues">report an issue</a>.</p>
+				<p>Built with <a href="https://www.11ty.io/">Eleventy</a>.</p>
 		</div>
 		</footer>
 
