--- a/_src/_templates/index.njk
+++ b/_src/_templates/index.njk
@@ -45,7 +45,7 @@
       <div class="input-wrap">
         <input id="email" type="email" name="email" autocapitalize="none" autocorrect="off" required="" placeholder="email@address.com">
       </div>
-      <button class="btn" data-button-variant="primary" type="submit">Sign up</button>
+      <button class="btn" data-button-variant="primary" type="submit"><span>Sign up</span></button>
     </div>
     <input type="hidden" name="stream" autocomplete="off" value="javascript-for-everyone">
   </form>
