--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -44,7 +44,7 @@
 		</script>
 
 		<meta property="og:site_name" content="{{ data.name }}">
-		<meta property="og:title" content="{{ data.title }}">
+		<meta property="og:title" content="{{ title or data.title }}">
 		<meta property="og:url" content="{{ data.url }}">
 		<meta property="og:description" content="{{ lede }}">
 		<meta property="og:image" content="{{ data.url }}/_assets/img/card.gif">
