--- a/_src/_assets/css/layout.css
+++ b/_src/_assets/css/layout.css
@@ -172,7 +172,13 @@ main .body {
 	padding: .5em clamp(.25em, 5vw, 2.5em ) .5em clamp(.25em, 5vw, 2.5em );
 }
 .post {
-	padding: .5em clamp(.25em, 5vw, 5em ) .5em clamp(.25em, 5vw, 5em );
+	padding: .5em clamp(.25em, 5vw, 5em ) 5em clamp(.25em, 5vw, 5em );
+	clear: both;
+}
+.post::after {
+	content: "";
+	display: block;
+	clear: both;
 }
 .sublede {
 	padding-left: clamp(.25vw, 5.5vw, 6em );
@@ -268,25 +274,36 @@ figure {
 	}
 }
 
-
+.js4e-foot {
+	padding-block-start: 1rem;
+}
+.js4e-foot .js4e-logo {
+	max-width: 20rem;
+}
 .js4e-logo {
     display: block;
     width: auto;
-    max-width: 100%;
+    width: 95%;
+    max-width: 25rem;
 }
-
 .sub-books .js4e-logo {
     margin-block-start: .5rem;
     max-width: 18rem;
 }
-
 .sub.js4e-index {
     margin-right: auto;
 }
 .sub.writingsub {
 	margin-block-start: 0;
 }
-
 .blogsub {
     margin-block: 0 4rem;
+}
+
+.post p:first-of-type:has(a[href="https://piccalil.li/javascript-for-everyone"]) {
+	display: none;
+}
+
+.js4e p:first-child {
+	margin-block-start: 1rem;
 }
